# ChangeLog for dev-python/pycukes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pycukes-0.1.2 (17 Nov 2009)

  17 Nov 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.2.ebuild:
  Version bump [845].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Restrict tests until they are fixed upstream.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Set SUPPORT_PYTHON_ABIS [205].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Keyworded amd64 [c95].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Keyworded x86 [f56].

  18 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Converted script to use module_script_wrapper.

  14 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.1.ebuild:
  Switch to using jnrowe-pypi eclass.

  06 Oct 2009; James Rowe <jnrowe@gmail.com> -pycukes-0.1.ebuild:
  Removing obsolete ebuild.

  06 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.ebuild:
  Added missing dependency on dev-python/story_parser.

*pycukes-0.1.1 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.1.ebuild:
  Version bump

  02 Oct 2009; James Rowe <jnrowe@gmail.com> pycukes-0.1.ebuild:
  Keyworded ~x86.

*pycukes-0.1 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
