@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pycukes-0.1.1.tar.gz 9082 RMD160 28d27aa9dd763e74fcc2530a5c0925328b503d61 SHA1 a14ddcdcbbe71d4dfff83f65fd5da0152fb8ee00 SHA256 5888bb6664f1a532698f67e45f9f00c985dcacb4ba53e5dbf491049b81e21d9c
 DIST pycukes-0.1.2.tar.gz 11312 RMD160 3eb66661b0d76d3e10fa850400bc650b60fb7a57 SHA1 054ff7692e08c507c73742c475adea656b29fd76 SHA256 0c31da0ed818f30831383905c43898fb5b3de30d98828188f24bd397f362b4d8
-EBUILD pycukes-0.1.1.ebuild 542 RMD160 d1277ecab541cddc2cbfd0dd290092645636bd1e SHA1 ba44e7988bd5a236e1f7c941e14556550d8c62f3 SHA256 42a2a675ee761f4b7d7202f88836e027530530e27ea6cf8f628a496f688022e8
-EBUILD pycukes-0.1.2.ebuild 614 RMD160 ce8131a020a7da1c2875a23192763d463941abc0 SHA1 0964f955a60c72cf2286b657f46cee710025ca16 SHA256 3a60fd9390a91fc931c0bc1fcfdf868a1b5cbd9196634c101ff1cbeaeb40ccd9
-MISC ChangeLog 1415 RMD160 ed8902ca301ef691beb8f724807bb859d1cbbf24 SHA1 edc00f07113f70eb2a664a4228d5b1b78a916af6 SHA256 762c4dcb0d1503cf856173f9cd24c7881bfae1a1a8023aa0f29530d423d1e159
+EBUILD pycukes-0.1.2.ebuild 613 RMD160 0c8ccf893e81811e189456708524560303fdd6cd SHA1 13fb95a5c833e6cfb9a587bd6c721364ad824f5a SHA256 32771f48411683ce23dc594b68f1e7d58701ae7266fce59cc41c234aaa52b360
+MISC ChangeLog 1525 RMD160 8aa1928fb8d182f81cbacbef9da5052ea6eb2d50 SHA1 e9df9ff2a07f56e44b4a726f707aaf9b0c3b5269 SHA256 0270a7450e087fd2ca9306bf0dce284a7f37db209762ddc4a370f96e1d905011
 MISC metadata.xml 566 RMD160 8218c880acf254b34d3a7b62cfd200b4131a44bd SHA1 e266b09b1118f2ed06d8fdc17d547eec180ec285 SHA256 a1a894d610a677a1c8eaa6fc6b056ca3e45c09dc5cb802b4c6ab1138491e5eff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksqLjYACgkQzJrj3cAXR0mhWgCeN5vya15if1Q/+ioG4Klbh08g
-JFAAnjYDEqFYXpzJoToydIi6TPoiNCB8
-=0en/
+iEYEARECAAYFAksqNiwACgkQzJrj3cAXR0krFwCdFIRUDMPgdr2AMgWbiMBn8hB4
+f4AAn3WcfH+ZajeN6IqUYo6fyDeTcQcs
+=wJrB
 -----END PGP SIGNATURE-----
