@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20090804 >=app-shells/bash-3.2 virtual/python
-dev-python/story_parser dev-python/pyhistorian virtual/python
-0
-http://pypi.python.org/packages/source/p/pycukes/pycukes-0.1.1.tar.gz
-test
-http://github.com/hugobr/pycukes
-MIT
-A Cucumber-like BDD framework built on top of Pyhistorian
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare unpack
-
-
-
-
-
