@@ -6,7 +6,7 @@ http://pypi.python.org/packages/source/p/pycukes/pycukes-0.1.2.tar.gz
 http://github.com/hugobr/pycukes
 MIT
 A Cucumber-like BDD framework built on top of Pyhistorian
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
