@@ -1,4 +1,3 @@
-REM 2009-12-17 +1 MSG Stabilise x86 dev-python/pycukes-0.1.2 %a
 REM 2009-12-22 +1 MSG Stabilise amd64 app-text/apvlv-0.0.7.5 %a
 REM 2009-12-22 +1 MSG Stabilise x86 app-text/apvlv-0.0.7.5 %a
 REM 2009-12-22 +1 MSG Stabilise amd64 www-client/cupage-0.3 %a
