@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Dec 2009; James Rowe <jnrowe@gmail.com> -pycukes-0.1.1.ebuild,
+  pycukes-0.1.2.ebuild:
+  Keyworded x86.
+
 *pycukes-0.1.2 (17 Nov 2009)
 
   17 Nov 2009; James Rowe <jnrowe@gmail.com> +pycukes-0.1.2.ebuild:
